# snippet-vault

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compiler.mjs  package-lock.json  package.json
js/: load.js
src/: api.c  api.h  js.c  js.h  js.test.c  main.c  main.test.c  scene.c  scene.h  stringstore.c  stringstore.h  stringstore.test.c
test/: add.test.c
ts/: api.d.ts  load.ts
